# mp3tag-writer

./: .gitignore  README.md  pyproject.toml  todo.md
.devcontainer/: devcontainer.json
mp3tag_writer/: __init__.py  __main__.py  utils.py
tests/: ruff.toml  test_main.py  test_study_mutagen.py  test_utils.py
