[project]
name = "mp3tag-writer"
version = "0.1.0"
description = "mp3タグを書き込む簡易なCLIツール"
readme = "README.md"
authors = [
  {name = "ishuzaks", email = "k.suzuki512+develop@gmail.com"},
]
license = {text = "MIT License"}
requires-python = ">=3.12"
dependencies = []

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.9",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN1",   # missing type self and cls
    "E999",   # syntax error
    "UP027",  # unpacked list comprehension
    "PT004",  # pytest missing fixture name underscore
    "PT005",  # pytest incorrect fixture name underscore
    "D1",     # undocumented
    "TD001",  # invalid todo tag
    "TD002",  # missing todo author
    "TD003",  # missing todo link
]
